# On-Track-SysID

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: sys_id.launch.py
models/SIM/: SIM_lookup_table.csv  SIM_pacejka.txt
on_track_sys_id/: on_track_sys_id.py
on_track_sys_id/helpers/: load_model.py  plot_results.py  save_model.py  simulate_model.py  train_model.py
params/: nn_params.yaml  pacejka_params.yaml
src/: nn_train.py  on_track_sys_id.py  simulate_model.py
src/helpers/: load_model.py  save_model.py
src/models/NUC2/: NUC2_pacejka.txt
src/models/NUC6/: NUC6_linear.txt
src/models/NUC7/: NUC7_glc_pacejka_lookup_table.csv  NUC7_linear.txt
src/models/SIM/: SIM_pacejka.txt
src/params/: nn_params.yaml
