<package format="3">
  <name>on_track_sys_id</name>
  <version>0.1.0</version>
  <description>The on_track_sys_id package</description>

  <maintainer email="odikici@ethz.ch">Onur Dikici</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>rospkg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
